# pyo3-creds

./: Cargo.toml  Makefile  README.md  main.py
src/: credentials.rs  lib.rs
