[package]
name = "credentials"
version = "0.1.0"
authors = ["tomazinhal <tomaz.azinhal@mobilityhouse.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/tmh-azinhal/pyo3-creds"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
default = ["pyo3/extension-module"]
extension-module = ["pyo3/extension-module"]

[lib]
name = "credentials"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
